# cookiecutter-pypackage-cpp

./: .gitignore  CMakeLists.txt  README.md  build.bat  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
src/: main.cpp
src/{{cookiecutter.module_name}}/: __init__.py
